# CW_4.

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: ABChhAPI.py  hhAPI.py  json_saver.py  json_saver_ABC.py  settings.py  utils.py  vacancy.py
